Revision history for libfq

0.7.0	2024-??-??

0.6.1	2024-0?-??
	- fix log level name parsing
	- install "libfq-version.h"

0.6.0	2024-05-06
	- support columns defined with "CHARACTER SET OCTETS"
	- support for INT128 datatype (Firebird 4 and later)
	- support TIME WITH TIME ZONE and TIMESTAMP WITH TIME ZONE datatypes
	- Improve FLOAT and DOUBLE PRECISION output
	- Add constant FBCONN_MAX_PARAMS
	- Improve control over log output
	- Fix for formatting issue with negative DECIMAL/NUMERIC values

0.5.1   2024-04-27
	- Tighten up tuple row/column bounds checking
	- Fixes for character set/encoding handling
	- Miscellaneous code cleanup

0.5.0	2022-12-28
	- Add functions FQprepare() and FQexecPrepared()
	- Handle errors encountered when executing isc_dsql_fetch()
	- Ensure FBconn objects are initialized correctly

0.4.3	2022-02-20
	- Fix NULL value handling in FQexecParams()

0.4.2	2020-10-17
	- Add configure option "--with-fbclient"
	- Fix FQexplainStatement() output

0.4.1	2019-05-31
	- fix some potential resource leaks
	- general code tidy up

0.4.0	2018-11-09
	- Support BOOLEAN datatype (Firebird 3 and later)
	- Store table name in result header information
	- Consolidate duplicated code block

0.3.0	2018-09-28
	- Refactor FQexecParams() result handling
	- Improve error message handling
	- Clean up memory handling
	- Add initial support for retrieving text BLOBs

0.2.0	2018-04-21
	- Add DocBook reference documentation
	- Add functions to return libfq version information
	- Rename FQconn and FQresult structs to FBconn and FBresult
	  respectively, for consistency with PostgreSQL's libpq naming
	  conventions
	- Have FQstatus() actually check whether the provided connection
	  is active
	- Add function FQreconnect() - note this may be modified
	- Improve error message handling
	- Improve memory handling
	- Fix "too many open handles to database" errors

0.1.4   2014-02-11
        - improve non-ASCII character handling (mainly for the
	  benefit of fbsql)