@@ -13,6 +13,18 @@
     <para>
       &libfq; 0.7.0 is currently under development.
     </para>
+    <sect2 id="release-0.7.0-api-changes">
+      <title>libfq API changes</title>
+      <para>
+        <itemizedlist>
+          <listitem>
+            <para>
+              Function <link linkend="libfq-firebirdapiversion">FQfirebirdApiVersion</link> added.
+            </para>
+          </listitem>
+        </itemizedlist>
+      </para>
+    </sect2>
   </sect1>
 
   <sect1 id="release-0.6.0">
