@@ -1,6 +1,7 @@
 Revision history for libfq
 
 0.7.0	2024-??-??
+	- Add function FQfirebirdApiVersion()
 
 0.6.1	2024-0?-??
 	- fix log level name parsing
